deployment/commons.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swl-commons
  labels:
    app: swl-commons
    contact: essoto
spec:
  selector:
    matchLabels:
      app: swl-commons
  replicas: 1
  template:
    metadata:
      labels:
        app: swl-commons
    spec:
      volumes:
      - name: cloudsql-commons-credentials
        secret:
          secretName: cloudsql-commons-credentials
      - name: commons-config
        secret:
          secretName: commons-config
      containers:
      - name: commons-server
        image: swl-eng/commons-server:latest
        ports:
          - containerPort: 3000
        # The following environment variables will contain the database host,
        # user and password to connect to the PostgreSQL instance.
        command: ["node", "/commons/build/server.js"]
        volumeMounts:
          - name: commons-config
            mountPath: /etc/commons
            readOnly: true
      - name: commons-nginx
        image: swl-eng/commons-nginx:latest
        ports:
            - containerPort: 80
        command:
          - nginx
          - -c
          - /commons.nginx.conf
          - -g
          - 'daemon off;'
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy",
                  "-instances=nyc-tlc-1225:us-central1:gehl-data-collector-central=tcp:5432",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        securityContext:
          runAsUser: 2  # non-root user
          allowPrivilegeEscalation: false
        volumeMounts:
          - name: cloudsql-commons-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
