deployment/commons_nginx_service.yml
apiVersion: v1
kind: Service
metadata:
  name: commons-nginx-service
  labels:
    app: swl-commons
    contact: essoto
spec:
  selector:
    app: swl-commons 
    #tier: backend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: NodePort
