deployment/commons_server_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: swl-commons
    contact: essoto
  name: commons-server-service
spec:
  selector:
    app: swl-commons
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  type: NodePort
