deployment/commons_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: commons-ingress 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: commons-nginx 
    servicePort: 8080
